засунул чат id в dotenv

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 /venv/
 .env
+/.idea/.gitignore
+/.idea/encodings.xml
+/.idea/lenta_online_bot1.iml
+/.idea/misc.xml
+/.idea/modules.xml
+/.idea/inspectionProfiles/profiles_settings.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
